<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">project blue</string>
    <string name="app_logo">%1$s logo</string>
    <string name="syncing">Syncing</string>
    <string name="company_name">Name Hill Software</string>
    <string name="copyright_year">2015</string>
    <string name="settings">Settings</string>
    <string name="title_activity_set_up_connection">Connection Settings</string>
    <string name="title_activity_library">Library</string>
    <string name="lbl_user_name">User Name</string>
    <string name="lbl_access_code">Access Code</string>
    <string name="lbl_library_name">Optional Name</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_local_only">Local Connections Only</string>
    <string name="save">Save</string>
    <string name="save_playlist">Save Playlist</string>
    <string name="saved">Saved</string>
    <string name="lbl_connected">Connected!</string>
    <string name="lbl_connecting">Connecting…</string>
    <string name="title_activity_file_view">File View</string>
    <string name="title_activity_view_now_playing">Now Playing</string>
    <string name="lbl_song_title">Now Playing</string>
    <string name="lbl_song_artist">Now Playing Artist</string>
    <string name="img_now_playing">Now Playing Album Image</string>
    <string name="img_now_playing_loading">Now Playing Album Image Loading</string>
    <string name="btn_view_files">View Files</string>
    <string name="btn_hide_files">Hide Files</string>
    <string name="btn_shuffle_files">Shuffle</string>
    <string name="btn_repeat_playlist">Repeat Playlist</string>
    <string name="btn_complete_playlist">Play Playlist to Completion</string>
    <string name="btn_play_files">Play All</string>
    <string name="btn_play">Play</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>
    <string name="btn_cancel">Cancel</string>
    <string name="skip_to">Skip To</string>
    <string name="lbl_connection_lost_title">Connection Lost</string>
    <string name="lbl_attempting_to_reconnect">The connection with the server has been lost. %1$s is attempting to reconnect.</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_waiting_for_connection">Waiting for Connection</string>
    <string name="lbl_click_to_cancel">Click here to cancel.</string>
    <string name="lbl_something_went_wrong">Something went wrong! Attempting to reconnect.</string>
    <string name="lbl_starting_playback">Starting Playback</string>
    <string name="title_activity_wait_for_connection">Waiting For Connection</string>
    <string name="btn_view_song_details">View Song Details</string>
    <string name="lbl_loading">Loading&#8230;</string>
    <string name="btn_add_file_to_playback">Play Last</string>
    <string name="btn_play_file_next">Play Next</string>
    <string name="lbl_song_added_to_now_playing">Song added to Now Playing</string>
    <string name="lbl_song_removed_from_now_playing">Song removed from Now Playing</string>
    <string name="lbl_getting_library_details">Getting library details</string>
    <string name="lbl_connecting_to_server_library">Connecting to server library</string>
    <string name="lbl_please_connect_to_valid_server">Please connect to a valid server</string>
    <string name="lbl_error_connecting_try_again">There was an error connecting to the server, try again later!</string>
    <string name="lbl_library_no_views">This library doesn\'t contain any views</string>
    <string name="lbl_getting_library_views">Getting library views</string>
    <string name="search">Search</string>
    <string name="title_activity_search_files">Search Files</string>
    <string name="lbl_search_hint">Search for files</string>
    <string name="title_activity_search_results">Search Results for &quot;%1$s&quot;</string>
    <string name="btn_remove_file">Remove file from playlist</string>
    <string name="btn_remove_header">Remove Header</string>
    <string name="title_svc_connecting_to_server">Connecting to server</string>
    <string name="title_long_click_menu">Long Click</string>
    <string name="tutorial_long_click_menu">Long click on an item to see a menu with additional actions available.</string>
    <string name="lbl_details">%1$s details</string>
    <string name="btn_sync_item">Sync Files</string>
    <string name="btn_add_server">Add Server</string>
    <string name="btn_add_header">Add Header</string>
    <string name="lbl_sync_path">Custom Sync Path</string>
    <string name="lbl_sync_music_location">Sync Music Location:</string>
    <string name="lbl_custom_headers">Custom Headers:</string>
    <string name="rbPrivateToApp">Private to App</string>
    <string name="rbPublicLocation">Public Music Location</string>
    <string name="rbCustomLocation">Custom:</string>
    <string name="lbl_use_existing_music">Use existing music on device for playback and sync</string>
    <string name="lbl_sync_local_connection">Sync only on local connections</string>
    <string name="select_view_title">Select view</string>
    <string name="screen_is_off">Screen Off</string>
    <string name="screen_is_on">Screen On</string>
    <string name="app_sync_settings">Sync Settings</string>
    <string name="app_only_sync_on_wifi">Only sync on Wi-Fi</string>
    <string name="app_only_sync_ext_power">Only sync on external power</string>
    <string name="start_sync_button">Start Sync</string>
    <string name="stop_sync_button">Stop Sync</string>
    <string name="downloading_status_label">Downloading %1$s</string>
    <string name="unknown_file">unknown file</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_track">Unknown Track</string>
    <string name="lbl_connect">Connect</string>
    <string name="app_audio_settings">Audio Settings</string>
    <string name="use_volume_leveling_setting">Use Volume Leveling (ReplayGain)</string>
    <string name="permissions_must_be_granted_for_settings">In order for the library settings to be changed, the requested permissions must be granted!</string>
    <string name="permissions_needed">Permissions needed</string>
    <string name="permissions_needed_launch_settings">Permissions are needed to read or write from the disk. Please set these permissions from the settings page.</string>
    <string name="title_activity_about">About %1$s</string>
    <string name="remove_server">Remove Server</string>
    <string name="save_and_connect">Save and Connect</string>
    <string name="confirmServerRemoval">Are you sure want to remove server %1$s? Removing the server will remove all associated synchronized files.</string>
    <string name="aboutAppText">%1$s\n\nVersion: %2$s (%3$s)\n\n\n\nCopyright © %4$s %5$s</string>
    <string name="playbackEngine">Playback Engine</string>
    <string name="notification_settings">Notification Settings:</string>
    <string name="modify_notification_settings">Modify in System Settings</string>
    <string name="notification_settings_tutorial_title">Notification Settings</string>
    <string name="notification_settings_tutorial">Getting sounds when playback changes? Click on \'%1$s\' and then change the importance of %2$s to "Medium" to disable playback sounds.</string>
    <string name="wake_on_lan_setting">Wake on LAN</string>
    <string name="sending_wake_signal">Sending wake signal to server</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="kill_playback">Kill Active Playback Engine</string>
    <string name="readOnlyConnection">Read-only Connection</string>
    <string name="syncing_files">Syncing Files</string>
    <string name="synced">Synced</string>
    <string name="files_synced">Files Synced</string>
    <string name="synced_items">Synced Items</string>
    <string name="edit_now_playing_list">Edit Now Playing</string>
    <string name="finish_edit_now_playing_list">Finish Editing Now Playing</string>
    <string name="edit_file_properties">Edit File Properties</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="edit">Edit</string>
    <string name="drag_item">Drag Item</string>
    <string name="lbl_cover_art">Cover Art for %1$s by %2$s</string>
    <string name="file_count_label">%1$s file(s)</string>
    <string name="files">Files</string>
    <string name="item_count_label">%1$s item(s)</string>
    <string name="items">Items</string>
    <string name="show_menu">Show Menu</string>
    <string name="hide_menu">Hide Menu</string>
    <string name="retry">Retry</string>
    <string name="connection_lost_retry_prompt">The connection has been lost! Try again?</string>
    <string name="new_or_existing_playlist_path">New or Existing Playlist Path</string>
    <string name="clear">Clear</string>
    <string name="change">Change</string>
    <string name="set">Set</string>
    <string name="optional_ssl_certificate">Optional SSL Certificate</string>
    <string name="invalid_ssl_certificate">An error occurred setting the SSL Certificate, please ensure it is valid and try again</string>
    <string name="empty_playlist">Empty Playlist</string>
    <string name="nothing_playing">Nothing Playing</string>
    <string name="empty_playlist_confirmation">Are you sure you want to empty the playlist?</string>
    <string name="log_to_file">Log to File</string>
    <string name="scroll_to_now_playing_item">Scroll to Now Playing Item</string>
    <string name="auto_scroll_to_now_playing_item">Auto Scroll to Now Playing Item</string>
    <string name="navigate_back">Navigate Back</string>
    <string name="optional_mac_address">Optional MAC Address</string>
    <string name="refresh">Refresh</string>
    <string name="view_more_options">View More Options</string>
    <string name="subsonic">Subsonic</string>
    <string name="change_server_type">Change Server Type</string>
    <string name="media_center">JRiver Media Center</string>
    <string name="url">URL</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="end">End</string>
    <string name="enable_peak_level_normalize">Enable Peak Level Normalize</string>
    <string name="theme">Theme</string>
    <string name="system">System</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="view_servers">View Servers</string>
    <string name="application_settings">Application Settings</string>
    <string name="active_server">Active Server</string>
    <string name="acknowledgements_title">Acknowledgements</string>
    <string name="test_connection">Test Connection</string>
    <string name="save_and_test_connection">Save and Test</string>
    <string name="header">Header</string>
    <string name="value">Value</string>
    <string name="server_type">Server Type</string>
    <string name="edit_header">Edit Header</string>
    <string name="side_loading_warning">Starting in 2027, a silent update, nonconsensually pushed by Google, will **block every Android app** whose developer hasn\'t registered with Google, signed their contract, paid up, and handed over government ID.

**Every app and every device, worldwide, with no opt-out.**</string>
    <string name="keep_android_open">Keep Android Open!</string>
    <string name="more_info">More Info</string>
    <string name="solutions">Solutions</string>
    <string name="no_server">No server</string>
    <string name="files_ratio">%1$s/%2$s files</string>
    <string name="downloads">Downloads</string>
    <string name="downloaded">Downloaded</string>
    <string name="unknown_item">Unknown Item</string>
    <string name="rating_value">Rating value</string>
</resources>
