<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable name="vm" type="com.lasthopesoftware.bluewater.settings.ApplicationSettingsViewModel"/>
    </data>

    <RelativeLayout
        android:id="@+id/appSettingsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/applicationSettingsToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="0dp"
            android:theme="@style/AppTheme.ActionBarStyle" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/applicationSettingsToolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/appSettingsVerticalLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:baselineAligned="false"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/app_sync_settings"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <CheckBox
                        android:id="@+id/syncOnWifiCheckbox"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_only_sync_on_wifi"
                        android:checked="@{vm.isSyncOnWifiOnly}"/>

                    <CheckBox
                        android:id="@+id/syncOnPowerCheckbox"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_only_sync_ext_power"
                        android:checked="@{vm.isSyncOnPowerOnly}"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/app_audio_settings"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <CheckBox
                        android:id="@+id/isVolumeLevelingEnabled"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/useVolumeLevelingSetting"
                        android:checked="@{vm.isVolumeLevelingEnabled}"/>

                    <LinearLayout
                        android:id="@+id/playbackEngineContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/playbackEngine"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <RadioGroup
                            android:id="@+id/playbackEngineOptions"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/playbackEngineControl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/killPlaybackEngine"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kill_playback"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/addServerContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/appSettingsVerticalLinearLayout"
                    android:layout_margin="1dp"
                    android:gravity="start"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/addServerButton"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableEnd="@drawable/ic_add_item_36dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/btn_add_server"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>
                </LinearLayout>

                <include
                    layout="@layout/asynchronous_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/addServerContainer"
                    app:bind="@{vm}"/>
            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>
</layout>
